--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movietracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://charlesmwray.github.io/movietr",
   "dependencies": {
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
